# scanlite_analysis_ros2

./: CMakeLists.txt  README.md  package.xml
config/: vicon.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/scanlite_analysis_ros2/lib/scanlite_analysis_ros2/: LiveDemoTool.py  reconstruction_node.py  segmentation_node.py
install/scanlite_analysis_ros2/lib/scanlite_analysis_ros2/PyCATMAUS/: __init__.py  test.py
install/scanlite_analysis_ros2/share/ament_index/resource_index/parent_prefix_path/: scanlite_analysis_ros2
install/scanlite_analysis_ros2/share/scanlite_analysis_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/scanlite_analysis_ros2/share/scanlite_analysis_ros2/cmake/: scanlite_analysis_ros2Config.cmake
install/scanlite_analysis_ros2/share/scanlite_analysis_ros2/launch/: segmentation_launch.py
install/scanlite_analysis_ros2/share/scanlite_analysis_ros2/scanlite_analysis_ros2/: reconstruction_node.py
launch/: odom_launch.py  segmentation_launch.py  vicon_launch.py
log/: latest_build
scanlite_analysis_ros2/: DataAcqTool.py  LiveDemoTool.py  align_node.py  reconstruction_node.py  reconstruction_node_vicon.py  rosbagtest.py  segmentation_node.py  transformation.py  transformation_odom.py  vio_aliner.py
scanlite_analysis_ros2/PyCATMAUS/: SegBone.py  TransFunction.py  solver_test.py
